@@ -8,6 +8,8 @@ synaptic (0.63.1ubuntu2) UNRELEASED; urgency=low
     - fix sorting in xapian search mode (LP: #508220)
   * gtk/gsynaptic.cc
     - Start with focus set on fast search entry (LP: #326155)
+  * Select first subview on view change (LP: #403165)
+  * Fix Gtk-CRITICAL when the fast search entry is cleared (LP: #385739)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 18 Feb 2010 09:29:15 +0100
 
